--- a/app/views/memos/index.scala.html
+++ b/app/views/memos/index.scala.html
@@ -4,19 +4,19 @@
 @layout("Memo index") {
 
     <div><a href="/">Topに戻る</a></div>
-    <h1><%= $current_user->username %>さんのメモ帳</h1>
+    <h1>さんのメモ帳</h1>
     <div class="mb20 mt10">
       <a href="/memos/new" class="dimention-btn"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>メモを書く</a>
     </div>
     @for(memo <- memos){
     <div class="memo-box clearfix">
-      <p><a href="/memos/@memo.id/edit">@memo.title</a></p>
+      <p><a href="/memos/@memo.id">@memo.title</a></p>
       <div class="fl-left">
-        <span>投稿日時 : <%= $row->formated_created %></span>
+        <span>投稿日時 : @memo.hogeVal </span>
       </div>
       <div class="fl-right">
-        <a href="/memos/<%= $row->id %>/edit" class="mr10">編集</a>
-        <a data-href="/memos/<%= $row->id %>/destroy" class="destroy" href="javascript:void(0);">削除</a>
+        <a href="/memos/@memo.id/edit" class="mr10">編集</a>
+        <a data-href="/memos/@memo.id/destroy" class="destroy" href="javascript:void(0);">削除</a>
       </div>
     </div>
     }
