--- a/app/views/users/login.scala.html
+++ b/app/views/users/login.scala.html
@@ -1,20 +1,28 @@
-
-@(message: String)
+@import helper._
+@import forms.RequestForm
+@(requestForm: Form[RequestForm])(implicit messages: Messages)
 
 @layout("User login") {
     <div><a href="/">Topに戻る</a></div>
     <h1>ログイン</h1>
     <div class="form-wrapper">
-      <form action="/users/login" method="post">
-        <div>
-          <input type="text" name="username" placeholder="ユーザー名を入力してください。">
-        </div>
-        <div>
-          <input type="password" name="password" placeholder="パスワードを入力してください。">
-        </div>
-        <div>
-          <input type="submit" value="ログイン" class="dimention-btn">
-        </div>
-      </form>
+        @form(action = routes.UsersController.result()) {
+            <div>
+                @inputText(requestForm("username"), '_showConstraints -> false, '_showErrors -> false)
+                @if(requestForm.hasErrors) {
+                    @requestForm.errors.collectFirst {
+                        case v if (v.key == "username.a") => {
+                            @Messages(v.message, v.args)
+                        }
+                    }.getOrElse("")
+                }
+            </div>
+            <div>
+                @inputPassword(requestForm("password"), '_showConstraints -> false, '_showErrors -> false)
+            </div>
+            <div>
+                <input type="submit" value="ログイン" class="dimention-btn">
+            </div>
+        }
     </div>
 }
