各アクションにフラッシュメッセージ実装

--- a/app/views/layout.scala.html
+++ b/app/views/layout.scala.html
@@ -1,11 +1,11 @@
 @(title: String)(content: Html)
-
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/reset.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/style.css")">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     </head>
     <body>
         <div class="wrapper">
