--- a/app/views/_main/index.scala.html
+++ b/app/views/_main/index.scala.html
@@ -1,20 +1,9 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(user: Option[User])
+@(user: Option[User])(implicit request: RequestHeader)
 
-@*
- * Call the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@layout("Welcome to Play") {
-
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-    *@
+@layout("Your memo pad") {
+    @request.flash.get("success").map{ msg =>
+        <div class="">@msg</div>
+    }
     <h1>あなたのメモ帳</h1>
     @user.map{ u =>
         <div>
