--- a/app/views/memos/index.scala.html
+++ b/app/views/memos/index.scala.html
@@ -1,27 +1,28 @@
-
-@(memos: List[Memo], user: Option[User], pagingMap: Map[String, Int])
+@(memos: List[Memo], user: Option[User], pagingMap: Map[String, Int])(implicit request: RequestHeader)
 
 @layout("Memo index") {
-
     <div><a href="/">Topに戻る</a></div>
+    @request.flash.get("success").map{ msg =>
+        <div class="">@msg</div>
+    }
     <h1>@user.get.username さんのメモ帳</h1>
     <div class="mb20 mt10">
       <a href="/memos/new" class="dimention-btn"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>メモを書く</a>
     </div>
-    @for(memo <- memos){
-    <div class="memo-box clearfix">
-      <p><a href="/memos/@memo.id">@memo.title</a></p>
-      <div class="fl-left">
-        <span>投稿日時 : @memo.hogeVal </span>
-      </div>
-      <div class="fl-right">
-        <a href="/memos/@memo.id/edit" class="mr10">編集</a>
-        <a data-href="/memos/@memo.id/destroy" class="destroy" href="javascript:void(0);">削除</a>
-      </div>
-    </div>
+    @for(memo <- memos) {
+        <div class="memo-box clearfix">
+          <p><a href="/memos/@memo.id/show">@memo.title</a></p>
+          <div class="fl-left">
+            <span>投稿日時 : @memo.hogeVal </span>
+          </div>
+          <div class="fl-right">
+            <a href="/memos/@memo.id/edit" class="mr10">編集</a>
+            <a data-href="/memos/@memo.id/destroy" class="destroy" href="javascript:void(0);">削除</a>
+          </div>
+        </div>
     }
     <div class="pager">
-    @for(i <- 1 to pagingMap.get("sumPageNum").get){
+    @for(i <- 1 to pagingMap.get("sumPageNum").get) {
         @if(i == pagingMap.get("page").get) {
             <a href="javascript:void(0);" class="current"><span>@i</span></a>
         }else{
