タグの追加・編集機能実装。case class Memo にメソッド定義。

--- a/app/views/_main/index.scala.html
+++ b/app/views/_main/index.scala.html
@@ -7,7 +7,7 @@
     <h1>あなたのメモ帳</h1>
     @user.map{ u =>
         <div>
-            <p>ようこそ @u.username</p>
+            <p>ようこそ @u.username さん</p>
         </div>
         <a href="/memos" class="dimention-btn">メモ帳を見る</a>
         <a href="/users/logout" class="dimention-btn">ログアウト</a>
