--- a/app/views/memos/_new.scala.html
+++ b/app/views/memos/_new.scala.html
@@ -30,6 +30,9 @@
             }
         </div>
         <div>
+            @inputText(requestForm("tag_str"), '_showConstraints -> false, '_showErrors -> false)
+        </div>
+        <div>
             <input type="submit" value="追加" class="dimention-btn">
         </div>
     }
