--- a/app/views/memos/show.scala.html
+++ b/app/views/memos/show.scala.html
@@ -15,6 +15,9 @@
         <div>
             <textarea readonly>@memo.content</textarea>
         </div>
+        <div>
+            <input readonly type="text" value="@memo.tagStr">
+        </div>
     </form>
     <a href="/memos/@memo.id/edit">>>このメモを編集する</a>
 }
