--- a/app/views/users/_new.scala.html
+++ b/app/views/users/_new.scala.html
@@ -1,6 +1,6 @@
 @import helper._
-@import forms.RequestForm
-@(requestForm: Form[RequestForm])(implicit messages: Messages)
+@import forms.UserForm
+@(requestForm: Form[UserForm])(implicit messages: Messages)
 @implicitFieldConstructor = @{ FieldConstructor(common.f) }
 
 @layout("User login") {
