Memo.scala メソッド名修正

--- a/app/views/memos/index.scala.html
+++ b/app/views/memos/index.scala.html
@@ -13,7 +13,7 @@
         <div class="memo-box clearfix">
           <p><a href="/memos/@memo.id/show">@memo.title</a></p>
           <div class="fl-left">
-            <span>投稿日時 : @memo.hogeVal </span>
+            <span>投稿日時 : @memo.postDate </span>
           </div>
           <div class="fl-right">
             <a href="/memos/@memo.id/edit" class="mr10">編集</a>
